--- a/assets/styles/globals.scss
+++ b/assets/styles/globals.scss
@@ -1,11 +1,14 @@
 // neutral
 $white: #fff;
+$black: #000;
 $error: red;
 
 // primary
 
 $navy: #051c2a;
 $text-grey: #5c5c5c;
+$date-grey: #8e8e93;
+$dark-grey: #949494;
 $divider-grey: #d9d9d9;
 $light-grey: #f1f1f1;
 $bleached-orange: #ffe2c8;
@@ -78,9 +81,9 @@ $breakpoint-lg: 1920px;
 %text-style-body {
   font-family: $font-default;
   font-style: normal;
-  font-weight: normal;
-  font-size: 17px;
-  line-height: 28px;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 20px;
 }
 
 %text-style-callout {
@@ -131,6 +134,23 @@ $breakpoint-lg: 1920px;
   line-height: 20px;
 }
 
+// html, body
+html,
+body {
+  height: 100%;
+  background-color: $white;
+}
+
+.container {
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+.contained {
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
 // z-index
 $z-index-jumbotron-img: 300;
 $z-index-jumbotron-img-bg: 200;
@@ -139,6 +159,7 @@ $z-index-feature-accessibility: 80;
 $z-index-feature-same-content: 79;
 $z-index-feature-extended-involvement: 78;
 
+// TODO: Fix margins order and add missing margins
 // margins
 .ml-5 {
   margin-left: 5rem;
@@ -150,51 +171,46 @@ $z-index-feature-extended-involvement: 78;
   margin-top: 3rem;
 }
 
-.mt-1-5 {
-  margin-top: 1.5rem;
-}
-
-.mt-2 {
-  margin-top: 2rem !important;
-}
-.mt-1 {
-  margin-top: 1rem !important;
-}
-
-.mt-0-5 {
-  margin-top: 0.5rem;
-}
-
-.mt-2-5 {
-  margin-top: 2.5rem;
-}
-
 .mt-3-5 {
   margin-top: 3.5rem;
 }
-
-.mr-0-5 {
-  margin-right: 0.5rem;
+.mt-2-5 {
+  margin-top: 2.5rem;
 }
-
-.mr-1 {
-  margin-right: 1rem;
+.mt-2 {
+  margin-top: 2rem;
+}
+.mt-1-5 {
+  margin-top: 1.5rem;
+}
+.mt-1-25 {
+  margin-top: 1.25rem;
+}
+.mt-1 {
+  margin-top: 1rem;
+}
+.mt-0-5 {
+  margin-top: 0.5rem;
 }
 
 .mr-0-25 {
   margin-right: 0.25rem;
 }
-
+.mr-0-5 {
+  margin-right: 0.5rem;
+}
+.mr-1 {
+  margin-right: 1rem;
+}
 .mr-1-5 {
   margin-right: 1.5rem;
 }
 
-.ml-1-5 {
-  margin-left: 1.5rem;
-}
-
 .ml-0-5 {
   margin-left: 0.5rem;
+}
+.ml-1-5 {
+  margin-left: 1.5rem;
 }
 
 .mb-5 {
@@ -207,4 +223,8 @@ $z-index-feature-extended-involvement: 78;
 
 .mb-1-5 {
   margin-bottom: 1.5rem;
+}
+
+.mb-1-25 {
+  margin-bottom: 1.25rem;
 }
